--- a/cssestilo.css
+++ b/cssestilo.css
@@ -108,3 +108,8 @@ button {
 button:hover {
   background-color: #095f5a;
 }
+section {
+  display: none; /* Escondido por padrão */
+  margin: 30px 0;
+}
+
